--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Django Simple Login{% endblock %}</title>
 
     <link rel="stylesheet" href='{% static "css/bootstrap.min.css" %}' />
